# Database-Simplfied

./: README.md  entry.js  paths.js
cpp/: CMakeLists.txt  build_dev.sh  build_node.sh  doxy.sh  entry_point.cpp  main.cpp
cpp/database/: BigInt.h  CMakeLists.txt  empty.cpp  file_wrapper.h  p.h  prob_createInfo.h  prob_file.h  prob_probability.h  prob_utils.h  prob_vars.h
cpp/link/: link_chance.h  link_edges.h  link_info.h  link_paths.h  link_utils.h  link_vars.h
routes/: routing_utils.js
routes/db_access/: info.js
routes/no_db_access/: chance.js
